CSS issues with heading of Downloads Page on Mobile

--- a/css/download_change.css
+++ b/css/download_change.css
@@ -8,6 +8,7 @@
   .down-head {
     font-weight: bold;
     font-size: 35px;
+    margin-top: 20px;
   }
 }
 
